some code added!

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
               </div>
               <div>
                 <!-- icons -->
-                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4 ">
+                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4">
                   <p>
                     <i class="fa-solid fa-star fa-fw mr-1 text-amber-400"></i>
                     5.0
@@ -336,12 +336,24 @@
                   <h1 class="text-xl font-extrabold my-3">
                     World Cup Flags Football
                   </h1>
-                  <p class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26">Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut urna diam quis sagittis.</p>
+                  <p
+                    class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26"
+                  >
+                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut
+                    urna diam quis sagittis.
+                  </p>
                 </div>
                 <!-- price -->
                 <div class="flex lg:gap-5 gap-3 items-center mt-4">
-                  <h3 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h3>
-                  <h4 class="text-opacity-80 text-gray-700 text-base font-medium"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</h4>
+                  <h3 class="text-[#FF4240] text-base font-extrabold">
+                    Price - $22.00
+                  </h3>
+                  <h4
+                    class="text-opacity-80 text-gray-700 text-base font-medium"
+                  >
+                    <i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee
+                    : Free
+                  </h4>
                 </div>
               </div>
             </div>
@@ -357,7 +369,7 @@
               </div>
               <div>
                 <!-- icons -->
-                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4 ">
+                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4">
                   <p>
                     <i class="fa-solid fa-star fa-fw mr-1 text-amber-400"></i>
                     5.0
@@ -370,12 +382,24 @@
                   <h1 class="text-xl font-extrabold my-3">
                     World Cup Flags Football
                   </h1>
-                  <p class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26">Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut urna diam quis sagittis.</p>
+                  <p
+                    class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26"
+                  >
+                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut
+                    urna diam quis sagittis.
+                  </p>
                 </div>
                 <!-- price -->
                 <div class="flex lg:gap-5 gap-3 items-center mt-4">
-                  <h3 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h3>
-                  <h4 class="text-opacity-80 text-gray-700 text-base font-medium"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</h4>
+                  <h3 class="text-[#FF4240] text-base font-extrabold">
+                    Price - $22.00
+                  </h3>
+                  <h4
+                    class="text-opacity-80 text-gray-700 text-base font-medium"
+                  >
+                    <i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee
+                    : Free
+                  </h4>
                 </div>
               </div>
             </div>
@@ -391,7 +415,7 @@
               </div>
               <div>
                 <!-- icons -->
-                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4 ">
+                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4">
                   <p>
                     <i class="fa-solid fa-star fa-fw mr-1 text-amber-400"></i>
                     5.0
@@ -401,15 +425,25 @@
                 </div>
                 <!-- title texts -->
                 <div>
-                  <h1 class="text-xl font-extrabold my-3">
-                    Cap For Hockeys
-                  </h1>
-                  <p class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26">Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut urna diam quis sagittis.</p>
+                  <h1 class="text-xl font-extrabold my-3">Cap For Hockeys</h1>
+                  <p
+                    class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26"
+                  >
+                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut
+                    urna diam quis sagittis.
+                  </p>
                 </div>
                 <!-- price -->
                 <div class="flex lg:gap-5 gap-3 items-center mt-4">
-                  <h3 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h3>
-                  <h4 class="text-opacity-80 text-gray-700 text-base font-medium"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</h4>
+                  <h3 class="text-[#FF4240] text-base font-extrabold">
+                    Price - $22.00
+                  </h3>
+                  <h4
+                    class="text-opacity-80 text-gray-700 text-base font-medium"
+                  >
+                    <i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee
+                    : Free
+                  </h4>
                 </div>
               </div>
             </div>
@@ -425,7 +459,7 @@
               </div>
               <div>
                 <!-- icons -->
-                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4 ">
+                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4">
                   <p>
                     <i class="fa-solid fa-star fa-fw mr-1 text-amber-400"></i>
                     5.0
@@ -438,12 +472,24 @@
                   <h1 class="text-xl font-extrabold my-3">
                     World Cup Flags Football
                   </h1>
-                  <p class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26">Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut urna diam quis sagittis.</p>
+                  <p
+                    class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26"
+                  >
+                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut
+                    urna diam quis sagittis.
+                  </p>
                 </div>
                 <!-- price -->
                 <div class="flex lg:gap-5 gap-3 items-center mt-4">
-                  <h3 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h3>
-                  <h4 class="text-opacity-80 text-gray-700 text-base font-medium"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</h4>
+                  <h3 class="text-[#FF4240] text-base font-extrabold">
+                    Price - $22.00
+                  </h3>
+                  <h4
+                    class="text-opacity-80 text-gray-700 text-base font-medium"
+                  >
+                    <i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee
+                    : Free
+                  </h4>
                 </div>
               </div>
             </div>
@@ -459,7 +505,7 @@
               </div>
               <div>
                 <!-- icons -->
-                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4 ">
+                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4">
                   <p>
                     <i class="fa-solid fa-star fa-fw mr-1 text-amber-400"></i>
                     5.0
@@ -472,12 +518,24 @@
                   <h1 class="text-xl font-extrabold my-3">
                     World Cup Flags Football
                   </h1>
-                  <p class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26">Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut urna diam quis sagittis.</p>
+                  <p
+                    class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26"
+                  >
+                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut
+                    urna diam quis sagittis.
+                  </p>
                 </div>
                 <!-- price -->
                 <div class="flex lg:gap-5 gap-3 items-center mt-4">
-                  <h3 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h3>
-                  <h4 class="text-opacity-80 text-gray-700 text-base font-medium"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</h4>
+                  <h3 class="text-[#FF4240] text-base font-extrabold">
+                    Price - $22.00
+                  </h3>
+                  <h4
+                    class="text-opacity-80 text-gray-700 text-base font-medium"
+                  >
+                    <i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee
+                    : Free
+                  </h4>
                 </div>
               </div>
             </div>
@@ -489,11 +547,15 @@
             <div class="lg:flex lg:justify-between gap-6 lg:p-6 p-4">
               <!-- img  -->
               <div class="">
-                <img class="lg:h-full w-full" src="images/football.png" alt="" />
+                <img
+                  class="lg:h-full w-full"
+                  src="images/football.png"
+                  alt=""
+                />
               </div>
               <div>
                 <!-- icons -->
-                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4 ">
+                <div class="flex gap-5 items-center font-medium lg:mt-0 mt-4">
                   <p>
                     <i class="fa-solid fa-star fa-fw mr-1 text-amber-400"></i>
                     5.0
@@ -506,16 +568,81 @@
                   <h1 class="text-xl font-extrabold my-3">
                     World Cup Flags Football
                   </h1>
-                  <p class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26">Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut urna diam quis sagittis.</p>
+                  <p
+                    class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26"
+                  >
+                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut
+                    urna diam quis sagittis.
+                  </p>
                 </div>
                 <!-- price -->
                 <div class="flex lg:gap-5 gap-3 items-center mt-4">
-                  <h3 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h3>
-                  <h4 class="text-opacity-80 text-gray-700 text-base font-medium"><i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee : Free</h4>
+                  <h3 class="text-[#FF4240] text-base font-extrabold">
+                    Price - $22.00
+                  </h3>
+                  <h4
+                    class="text-opacity-80 text-gray-700 text-base font-medium"
+                  >
+                    <i class="fa-solid fa-cart-shopping mr-1"></i> Delivery Fee
+                    : Free
+                  </h4>
                 </div>
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <!-- section five here -->
+      <section>
+        <div class="lg:my-[5rem]">
+          <h1 class="text-center lg:text-3xl text-xl font-extrabold">
+            Clients Question
+          </h1>
+          <p
+            class="lg:w-[37.938rem] w-[18.25rem] lg:my-[2rem] my-[1rem] mx-auto text-center lg:text-base text-sm font-medium leading-26"
+          >
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <!-- Clients Question Sections -->
+        <div class="lg:flex lg:gap-6 justify-center lg:w-full w-11/12 mx-auto">
+          <div>
+            <img class="lg:my-0 my-6" src="images/qustionmark.png" alt="" />
+          </div>
+          <div class="">
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                Click to open this one and close others
+              </div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            
+            
+          </div>
+        </div>
+      </section>
+
+      <!-- section five here -->
+      <section>
+        <div class="lg:my-[5rem]">
+          <h1 class="text-center lg:text-3xl text-xl font-extrabold">
+            Get In Touch
+          </h1>
+          <p
+            class="lg:w-[37.938rem] w-[18.25rem] lg:my-[2rem] my-[1rem] mx-auto text-center lg:text-base text-sm font-medium leading-26"
+          >
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+        </div>
+        <!-- Get In Touch Sections -->
+        <div class="grid grid-cols-12 gap-6">
+          <div class="col-span-4 w-full h-16 bg-blue-700"></div>
+          <div class="col-span-8 w-full h-16 bg-black"></div>
         </div>
       </section>
     </main>
