some code added!

--- a/index.html
+++ b/index.html
@@ -686,9 +686,64 @@
           </p>
         </div>
         <!-- Get In Touch Sections -->
-        <div class="grid grid-cols-12 gap-6">
-          <div class="col-span-4 w-full h-16 bg-blue-700"></div>
-          <div class="col-span-8 w-full h-16 bg-black"></div>
+        <div class="grid grid-cols-1 lg:grid-cols-12 gap-6 w-11/12 mx-auto">
+          <div class="lg:col-span-5 w-full h-auto rounded-2xl border border-solid border-gray-500 border-opacity-10">
+            <div class="lg:p-12  p-2">
+              <div class="lg:w-[374px]  lg:h-[184px] shrink-0 bg-[#F9FEF1] rounded-2xl p-6 mx-auto">
+                <img src="images/icons/telphone.png" alt="">
+                <p class="text-base font-normal mt-6 text-gray-300">Phone Number :</p>
+                <h5 class="text-lg font-bold ">(+62) 123-321-543</h5>
+              </div>
+              <div class="lg:w-[374px] lg:h-[184px] shrink-0 bg-[#FFFCEF] rounded-2xl my-6 p-6 mx-auto">
+                <img src="images/icons/email.png" alt="">
+                <p class="text-base font-normal mt-6 text-gray-300">Email :</p>
+                <h5 class="text-lg font-bold ">hockeys@support.com</h5>
+              </div>
+              <div class="lg:w-[374px] lg:h-[184px] shrink-0 bg-[#F0F6FE] rounded-2xl p-6 mx-auto">
+                <img src="images/icons/map.png" alt="">
+                <p class="text-base font-normal mt-6 text-gray-300">Location :</p>
+                <h5 class="text-lg font-bold ">152/1 Mohakhali Wireless Gate</h5>
+              </div>
+              
+            </div>
+          </div>
+
+
+          <div class="lg:col-span-7 w-full  ">
+                    <div class="grid grid-cols-1 lg:grid-cols-12 gap-6 w-11/12 mx-auto">
+
+                      <div class="lg:col-span-6 w-full h-auto ">
+                        <div class="">
+                          <div class="">
+                            <h1 class="text-xl font-bold mb-4">Youre Name</h1>
+                            <input class="w-full h-[50px] p-3 shrink-0 border-none outline-none rounded-xl text-sm bg-[#676464] bg-opacity-5  " type="text" name="" id="">
+                          </div>
+                          <div class="mt-6">
+                            <h1 class="text-xl font-bold mb-4">Youre Name</h1>
+                            <input class="w-full h-[50px] p-3 shrink-0 border-none outline-none rounded-xl text-sm bg-[#676464] bg-opacity-5  " type="text" name="" id="">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="lg:col-span-6 w-full  ">
+                        <div class="">
+                          <div class="">
+                            <h1 class="text-xl font-bold mb-4">Youre Name</h1>
+                            <input class="w-full h-[50px] p-3 shrink-0 border-none outline-none rounded-xl text-sm bg-[#676464] bg-opacity-5  " type="text" name="" id="">
+                          </div>
+                          <div class="mt-6">
+                            <h1 class="text-xl font-bold mb-4">Youre Name</h1>
+                            <input class="w-full h-[50px] p-3 shrink-0 border-none outline-none rounded-xl text-sm bg-[#676464] bg-opacity-5  " type="text" name="" id="">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="lg:col-span-12 w-full h-16 bg-green-500"></div>
+            
+                    </div>
+          </div>
+
+
+          <div class="lg:col-span-12 w-full h-16 bg-green-500"></div>
+
         </div>
       </section>
     </main>
