--- a/index.html
+++ b/index.html
@@ -748,8 +748,14 @@
           </div>
 
 
-          <div class="lg:col-span-12  lg:w-full  w-11/12 mx-auto h-[150px] bg-[#676464] bg-opacity-5">
-
+          <div class="lg:col-span-12  lg:w-[98%] text-center py-8 w-11/12 lg:mx-0 mx-auto h-[155px] bg-[#676464] bg-opacity-5">
+              <h1 class="text-2xl font-extrabold">Social Media</h1>
+              <div class=" flex  justify-center gap-7 p-10">
+                <i class="fa-brands fa-facebook-f fa-2xl"></i>
+                <i class="fa-brands fa-instagram fa-2xl"></i>
+                <i class="fa-brands fa-x-twitter fa-2xl"></i>
+                <i class="fa-brands fa-github fa-2xl"></i>
+              </div>
           </div>
 
         </div>
