--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
     <main class="lg:w-[90rem] mx-auto lg:my-[1rem]">
       <!-- section one here -->
       <section>
+        <hr class="border-dashed border">
         <div class="">
           <h1 class="text-center lg:text-3xl text-xl font-extrabold">
             Professional Hockeys Club
@@ -130,12 +131,12 @@
           <p
             class="lg:w-[37.938rem] w-[18.25rem] lg:my-[2rem] my-[1rem] mx-auto text-center lg:text-base text-sm font-medium leading-26"
           >
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+          Hockey, a fast-paced sport, combines skill and strategy on the ice. Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
           </p>
         </div>
+        <hr class="border-dashed border">
         <!-- percentage circle -->
-        <div class="lg:flex lg:justify-evenly lg:items-center text-center">
+        <div class="lg:flex lg:justify-evenly lg:items-center text-center lg:my-[3rem]">
           <div class="">
             <div
               class="radial-progress text-[#FF4240]"
@@ -146,7 +147,7 @@
             </div>
             <h1 class="my-[0.8rem] text-xl font-semibold">Prayer Facility</h1>
             <p class="w-[15.625rem] mx-auto text-center text-base font-normal">
-              Amet consectetur. Condimentum dignissim adipiscing .
+              creating an exhilarating experience for fans worldwide. .
             </p>
           </div>
           <div class="my-[3rem]">
@@ -159,7 +160,7 @@
             </div>
             <h1 class="my-[0.8rem] text-xl font-semibold">Prayer Facility</h1>
             <p class="w-[15.625rem] mx-auto text-center text-base font-normal">
-              Amet consectetur. Condimentum dignissim adipiscing .
+               creating an exhilarating experience for fans worldwide.
             </p>
           </div>
           <div class="">
@@ -172,7 +173,7 @@
             </div>
             <h1 class="my-[0.8rem] text-xl font-semibold">Prayer Facility</h1>
             <p class="w-[15.625rem] mx-auto text-center text-base font-normal">
-              Amet consectetur. Condimentum dignissim adipiscing .
+              creating an exhilarating experience for fans worldwide.
             </p>
           </div>
           <div class="my-[3rem]">
@@ -185,13 +186,14 @@
             </div>
             <h1 class="my-[0.8rem] text-xl font-semibold">Prayer Facility</h1>
             <p class="w-[15.625rem] mx-auto text-center text-base font-normal">
-              Amet consectetur. Condimentum dignissim adipiscing .
+              creating an exhilarating experience for fans worldwide.
             </p>
           </div>
         </div>
       </section>
       <!-- section two here -->
       <section>
+        <hr class="border-dashed border">
         <div class="lg:my-[5rem]">
           <h1 class="text-center lg:text-3xl text-xl font-extrabold">
             Program Sections
@@ -199,12 +201,12 @@
           <p
             class="lg:w-[37.938rem] w-[18.25rem] lg:my-[2rem] my-[1rem] mx-auto text-center lg:text-base text-sm font-medium leading-26"
           >
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+          Hockey, a fast-paced sport, combines skill and strategy on the ice. Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
           </p>
         </div>
+        <hr class="border-dashed border">
         <!-- Program Sections -->
-        <div>
+        <div class="lg:my-[3rem]">
           <div class="grid grid-cols-12 gap-4 justify-center">
             <!-- Column -->
             <div
@@ -224,9 +226,7 @@
               <p
                 class="lg:w-[495px] text-white lg:text-base text-sm font-medium leading-26 lg:my-5 my-2 text-justify"
               >
-                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                elit enim sagittis turpis in magna. Id et sed euismod natoque
-                amet nunc morbi nulla. Tortor congue sed et in.
+              Hockey, a fast-paced sport, combines skill and strategy on the ice. Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
               </p>
               <button
                 class="btn rounded text-white text-base font-semibold lg:text-xl lg:font-bold bg-[#FF4240] border-none outline-none"
@@ -253,9 +253,7 @@
               <p
                 class="lg:w-[495px] text-white lg:text-base text-sm font-medium leading-26 lg:my-5 my-2 text-justify"
               >
-                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                elit enim sagittis turpis in magna. Id et sed euismod natoque
-                amet nunc morbi nulla. Tortor congue sed et in.
+              Hockey, a fast-paced sport, combines skill and strategy on the ice. Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
               </p>
               <button
                 class="btn rounded text-white text-base font-semibold lg:text-xl lg:font-bold bg-[#FF4240] border-none outline-none"
@@ -282,9 +280,7 @@
               <p
                 class="lg:w-[495px] text-white lg:text-base text-sm font-medium leading-26 lg:my-5 my-2 text-justify"
               >
-                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                elit enim sagittis turpis in magna. Id et sed euismod natoque
-                amet nunc morbi nulla. Tortor congue sed et in.
+              Hockey, a fast-paced sport, combines skill and strategy on the ice. Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
               </p>
               <button
                 class="btn rounded text-white text-base font-semibold lg:text-xl lg:font-bold bg-[#FF4240] border-none outline-none"
@@ -297,6 +293,7 @@
       </section>
       <!-- section three here -->
       <section>
+        <hr class="border-dashed border">
         <div class="lg:my-[5rem] mt-14">
           <h1 class="text-center lg:text-3xl text-xl font-extrabold">
             Our New Products
@@ -304,13 +301,13 @@
           <p
             class="lg:w-[37.938rem] w-[18.25rem] lg:my-[2rem] my-[1rem] mx-auto text-center lg:text-base text-sm font-medium leading-26"
           >
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+          Hockey, a fast-paced sport, combines skill and strategy on the ice. Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
           </p>
         </div>
+        <hr class="border-dashed border">
         <!-- Products card Sections -->
         <div
-          class="grid lg:grid-cols-2 grid-cols-1 lg:grid-rows-3 w-11/12 mx-auto justify-center gap-4"
+          class="grid lg:grid-cols-2 grid-cols-1 lg:grid-rows-3 w-11/12 mx-auto justify-center gap-4 lg:my-[3rem]"
         >
           <div
             class="col-span-1 lg:w-full lg:h-[218px] w-11/12 h-auto flex-shrink-0 rounded-2xl mx-auto border border-solid border-gray-500 border-opacity-10"
@@ -385,8 +382,7 @@
                   <p
                     class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26"
                   >
-                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut
-                    urna diam quis sagittis.
+                  Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
                   </p>
                 </div>
                 <!-- price -->
@@ -429,8 +425,7 @@
                   <p
                     class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26"
                   >
-                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut
-                    urna diam quis sagittis.
+                  Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
                   </p>
                 </div>
                 <!-- price -->
@@ -475,8 +470,7 @@
                   <p
                     class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26"
                   >
-                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut
-                    urna diam quis sagittis.
+                  Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
                   </p>
                 </div>
                 <!-- price -->
@@ -521,8 +515,7 @@
                   <p
                     class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26"
                   >
-                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut
-                    urna diam quis sagittis.
+                 Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
                   </p>
                 </div>
                 <!-- price -->
@@ -571,8 +564,7 @@
                   <p
                     class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26"
                   >
-                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut
-                    urna diam quis sagittis.
+                 Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
                   </p>
                 </div>
                 <!-- price -->
@@ -594,6 +586,7 @@
       </section>
       <!-- section five here -->
       <section>
+        <hr class="border-dashed border">
         <div class="lg:my-[5rem]">
           <h1 class="text-center lg:text-3xl text-xl font-extrabold">
             Clients Question
@@ -601,12 +594,12 @@
           <p
             class="lg:w-[37.938rem] w-[18.25rem] lg:my-[2rem] my-[1rem] mx-auto text-center lg:text-base text-sm font-medium leading-26"
           >
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+          Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
           </p>
         </div>
+        <hr class="border-dashed border">
         <!-- Clients Question Sections -->
-        <div class="lg:flex lg:gap-6 justify-center lg:w-full w-11/12 mx-auto">
+        <div class="lg:flex lg:gap-6 justify-center lg:w-full w-11/12 mx-auto lg:my-[3rem]">
           <div>
             <img class="lg:my-0 my-6" src="images/qustionmark.png" alt="" />
           </div>
@@ -616,8 +609,7 @@
               <div class="collapse-title text-xl font-bold">Our Equipment</div>
               <div class="collapse-content">
                 <p>
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
                 </p>
               </div>
             </div>
@@ -628,8 +620,7 @@
               </div>
               <div class="collapse-content">
                 <p>
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
                 </p>
               </div>
             </div>
@@ -640,8 +631,7 @@
               </div>
               <div class="collapse-content">
                 <p>
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
                 </p>
               </div>
             </div>
@@ -650,8 +640,7 @@
               <div class="collapse-title text-xl font-bold">Ski Touring</div>
               <div class="collapse-content">
                 <p>
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
                 </p>
               </div>
             </div>
@@ -660,8 +649,7 @@
               <div class="collapse-title text-xl font-bold">Booking</div>
               <div class="collapse-content">
                 <p>
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
                 </p>
               </div>
             </div>
@@ -670,8 +658,7 @@
               <div class="collapse-title text-xl font-bold">Pricings</div>
               <div class="collapse-content">
                 <p>
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
                 </p>
               </div>
             </div>
@@ -681,6 +668,7 @@
 
       <!-- section five here -->
       <section>
+        <hr class="border-dashed border">
         <div class="lg:my-[5rem]">
           <h1 class="text-center lg:text-3xl text-xl font-extrabold">
             Get In Touch
@@ -688,12 +676,12 @@
           <p
             class="lg:w-[37.938rem] w-[18.25rem] lg:my-[2rem] my-[1rem] mx-auto text-center lg:text-base text-sm font-medium leading-26"
           >
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+          Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
           </p>
         </div>
+        <hr class="border-dashed border">
         <!-- Get In Touch Sections -->
-        <div class="grid grid-cols-1 lg:grid-cols-12 gap-6 w-11/12 mx-auto">
+        <div class="grid grid-cols-1 lg:grid-cols-12 gap-6 w-11/12 mx-auto lg:my-[3rem]">
           <div
             class="lg:col-span-5 w-full h-auto rounded-2xl border border-solid border-gray-500 border-opacity-10"
           >
@@ -817,8 +805,7 @@
         <div class="col-span-12 lg:col-span-6 lg:text-left text-center">
           <h1 class="text-3xl font-extrabold">Get In Touch</h1>
           <p class="w-[346px] text-base font-medium my-6">
-            Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat
-            dolor. Purus urna in sit nullam proin.
+            Hockey, a fast-paced sport, combines skill and strategy on the ice. Players showcase agility, teamwork, and precision
           </p>
           <div class="text-base font-semibold">
             <h3>
